kubernetes/arr/readarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  readarr
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: readarr
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: readarr
    spec:
      containers:
      - image: readarr
        name: readarr
        resources:
          limits:
            cpu: "100m"
            memory: "256M"
          requests:
            cpu: "20m"
            memory: "55M"
        ports:
        - containerPort:  8787
          name:  readarr
        volumeMounts:
        - mountPath: /media
          name: media
        - mountPath: /config
          name: config
      - name: readarr-exportarr
        image: exportarr
        imagePullPolicy: IfNotPresent
        args: [readarr]
        livenessProbe:
          httpGet:
            path: /healthz
            port: exportarr
          failureThreshold: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /healthz
            port: exportarr
          failureThreshold: 5
          periodSeconds: 10
        resources:
          requests:
            cpu: 10m
            memory: 20Mi
          limits:
            cpu: 20m
            memory: 40Mi
        ports:
        - containerPort:  9707
          name:  exportarr
        volumeMounts:
        - name: config
          mountPath: /config
      volumes:
        - name: media
          nfs:
            path: /tank/media
            server: "192.168.1.42"
        - name: config
          persistentVolumeClaim:
            claimName: readarr-config
