kubernetes/arr/readarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: readarr
spec:
  selector:
    app.kubernetes.io/name: readarr
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: readarr
    protocol: TCP
    port: 8787
    targetPort: 8787
  - name: exportarr
    protocol: TCP
    port: 9707
    targetPort: 9707
